--- a/src/content/champions/elif-kiesow-cortez.yaml
+++ b/src/content/champions/elif-kiesow-cortez.yaml
@@ -8,7 +8,7 @@ languages:
   - Italian
   - Portuguese
 pronoun: She/Her
-country: Netherlands
+country: The Netherlands
 bio: Dr. Elif Kiesow Cortez is currently a research fellow at Stanford Law School and collaborates with the Stanford Institute for Human-Centered AI. Elif is a policy advocate for responsible technology and ethical product design. Elif previously worked in policy advisory, project management, research and academic roles on the governance of emerging technologies. She has been appointed as an advisory board member for projects of the UNFCCC, European Research Council, IAPP and she currently participates in developing privacy enhancing technology standards for a project of the IEEE SA. She was a member of the UN IGF Policy Network on Environment. Elif is a frequent international speaker on responsible tech governance with a current emphasis on green tech, responsible AI and tech ethics. She previously delivered talks to diverse audiences in the USA, Europe, China, Brazil, and Australia among many other countries.
 type: normal
 social:
