updating bio for Wilco Burggraaf

--- a/src/content/champions/wilco-burggraaf.yaml
+++ b/src/content/champions/wilco-burggraaf.yaml
@@ -6,7 +6,7 @@ languages:
   - English
   - Dutch
 pronoun: He/Him
-country: Netherlands
+country: The Netherlands
 city: Rijen
 bio: |
  "Wilco Burggraaf, Principal Lead of Green Software Engineering @ HighTech InnovatorsWith over 20 years of experience in software development (mainly C#), Wilco has excelled in roles like developer, architect, agile tester, and IT management advisor. Recently stepping into the role of Principal Lead of Green Software Engineering, Wilco is dedicated to advancing Extreme Software Performance—creating efficient, impactful systems with minimal environmental impact. Since January 2024, he has championed sustainable practices, balancing innovation with responsibility.At HighTech Innovators, Wilco focuses on research, training, and practical solutions to drive purposeful software engineering while fostering collaboration and diversity, including supporting initiatives like Women in Tech®Netherlands.”
