Update Juliano Custódio's profile with corrected activity description and enhance sorting of activities by year and month in the champion's page.

--- a/src/content/champions/juliano-custódio.yaml
+++ b/src/content/champions/juliano-custódio.yaml
@@ -21,7 +21,7 @@ activities:
     dateFrom: 2024-12-07
     dateTo: 2024-12-07
     title: "GreenOps: Reducing the carbon footprint in the cloud"
-    description:  "I was in Piracicaba-SP at the DEVPIRA Festival event presenting my talk on "GreenOps: Reducing the carbon footprint in the cloud"
+    description:  "I was in Piracicaba-SP at the DEVPIRA Festival event presenting my talk on \"GreenOps: Reducing the carbon footprint in the cloud\"
 
      I talked about the principles of Green Software, and how we can use tools like Azure Carbon Optimization to monitor the CO2 emissions of our cloud infrastructure."
     url: https://www.linkedin.com/posts/julianocustodio_greenit-itsustainability-greenops-activity-7273349922467241987-CfiP/?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAykypUBbtlAdBt0jmWXMocxW7eLyNhJfuY
