Adding activities for Julian Gommlich

--- a/src/content/champions/julian-gommlich.yaml
+++ b/src/content/champions/julian-gommlich.yaml
@@ -27,3 +27,11 @@ activities:
     title: Green Software Development Community Nürnberg
     description: Together with Jürgen Leger and Tantive GmbH, I organize a local meetup community in Nurmberg about Green Software Development. So far four meetups took place with an average of 25 participants.
     url: https://www.meetup.com/green-software-development-nurnberg/
+  - contributionType: speaking
+    linkedGSFProject: Higher Education Engagement
+    subtype: online-talk
+    dateFrom: 2024-05-15
+    dateTo: 2024-05-15
+    title: "Webinar: Mit grüner IT die Welt retten"
+    description: The Green Office of the Duale Hochschule Baden-Württemberg invited me to give a two hour online talk about Green IT.
+    url: https://www.linkedin.com/posts/julian-gommlich-2451431a5_viele-gr%C3%BC%C3%9Fe-aus-den-haag-ich-habe-grade-activity-7194237538390167552-7XGa
