Update activity titles for Ines Garcia and Rafael Ferreira to include quotes for consistency

--- a/src/content/champions/ines-garcia.yaml
+++ b/src/content/champions/ines-garcia.yaml
@@ -84,7 +84,7 @@ activities:
     dateTo: 2024-05-20
     title: "Keynote: Agile Sustainability"
     subtitle: Evolving Our Practice
-    description: As Agile practitioners product & organisation sustainability is our responsibility. In this session we will delve from the business case for Sustainability (& debunking top excuses) right into the responsibility in shaping efficient, modular and natural-capital aware products and systems. Not just by the mantra of “less is more” (simplifying & optimizing), we’ll explore the concept of Circular Economy and how can be applied to our daily practices. Skill up for what’s on-demand and what we ought to achieve within the next 6 years: The legally binding Paris Agreement. Not long!
+    description: "As Agile practitioners product & organisation sustainability is our responsibility. In this session we will delve from the business case for Sustainability (& debunking top excuses) right into the responsibility in shaping efficient, modular and natural-capital aware products and systems. Not just by the mantra of “less is more” (simplifying & optimizing), we’ll explore the concept of Circular Economy and how can be applied to our daily practices. Skill up for what’s on-demand and what we ought to achieve within the next 6 years: The legally binding Paris Agreement. Not long!"
     url: https://leanagile.london/schedule/agile-sustainability-evolving-our-practice/
     relatedEvent: Lean Agile London
   - contributionType: speaking
