Edited bio for Clifton Reddy

--- a/src/content/champions/clifton-reddy.yaml
+++ b/src/content/champions/clifton-reddy.yaml
@@ -14,7 +14,7 @@ city: Houston
 bio: |
  "Clifton Reddy is a seasoned software engineer and technology leader with over 24 years of experience designing and architecting enterprise-grade solutions for mission-critical business needs. He currently leads DevOps and cloud migration initiatives, driving innovation, scalability, and operational excellence across his organization. He is a Senior Member of IEEE and a Fellow of the British Computer Society (BCS). He currently serves as the Chair of the Young Professionals Affinity Group and Vice Chair of the Systems Council within the IEEE Galveston Bay Section, Region 5.
 
- Clifton is also a passionate advocate for sustainability in tech. He serves on the leadership team of the Green Software Foundation, where he champions practices to reduce Software Carbon Intensity and organizes the Houston Chapter Meetup to grow awareness and community engagement.
+ Clifton is also a passionate advocate for sustainability in tech. As a speaker and community organizer, he champions practices to reduce Software Carbon Intensity and organizes the Houston Chapter Meetup to grow awareness and community engagement.
 
  As a respected thought leader, Clifton has been a guest speaker at events including FITP at the University of Houston, University of Houston–Clear Lake, and global conferences such as Conf42. He is also the author of several scholarly and industry articles focused on green software and tech career development, including:
 
