Updating profile for Aditya Manglik

--- a/src/content/champions/aditya-manglik.yaml
+++ b/src/content/champions/aditya-manglik.yaml
@@ -1,7 +1,7 @@
 firstName: Aditya
 lastName: Manglik
-role: Volunteer
-organization: SCER
+role: Researcher
+organization: ETH Zurich
 languages: 
   - English
   - German
