--- a/src/content/champions/ines-garcia.yaml
+++ b/src/content/champions/ines-garcia.yaml
@@ -105,7 +105,7 @@ activities:
     subtype: personal-blog-post
     dateFrom: 2024-06-21
     dateTo: 2024-06-21
-    title: "AI: don't be fooled by the "hype" that I got"
+    title: "AI: don't be fooled by the \"hype\" that I got"
     subtitle: Green Software Practitioners beware (& take informed decisions)
     description: |
      "Before you spin a lazy post or useless image, I think it is time...
